WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120373
AX: aria-relevant does not expose AXARIARelevant
https://bugs.webkit.org/show_bug.cgi?id=120373
Summary
AX: aria-relevant does not expose AXARIARelevant
Jon Gunderson
Reported
2013-08-27 13:43:09 PDT
In ARIA testcase 509 aria-relavent is not being exposed, the aria-live property should cancel the aria-presentation property
https://www.w3.org/WAI/PF/testharness/testcases/edit?testsuite_id=1&testcase_id=509
This is an important feature for ARIA 1.0 specification to go to recommendation
Attachments
patch
(6.66 KB, patch)
2013-09-05 09:03 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-27 13:43:20 PDT
<
rdar://problem/14848518
>
James Craig
Comment 2
2013-09-04 13:40:06 PDT
Public test case: Previous link is to the private test harness.
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/presentation-role/509.html
James Craig
Comment 3
2013-09-04 13:55:02 PDT
From the dupe: Here are the test cases that fail:(radio, checkbox)
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/754.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/755.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/759.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/760.html
Here are some of the test cases that pass (text, file, button):
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/753.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/756.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/name-computation-input/757.html
James Craig
Comment 4
2013-09-04 13:56:54 PDT
Ignore that last comment. It was intended for
bug 116570
.
chris fleizach
Comment 5
2013-09-05 09:03:53 PDT
Created
attachment 210622
[details]
patch
Darin Adler
Comment 6
2013-09-05 18:54:27 PDT
Comment on
attachment 210622
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210622&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:1562 > + || hasAttribute(aria_atomicAttr) > + || hasAttribute(aria_busyAttr) > + || hasAttribute(aria_controlsAttr) > + || hasAttribute(aria_describedbyAttr) > + || hasAttribute(aria_disabledAttr) > + || hasAttribute(aria_haspopupAttr) > + || hasAttribute(aria_invalidAttr) > + || hasAttribute(aria_labelAttr) > + || hasAttribute(aria_labelledbyAttr) > + || hasAttribute(aria_relevantAttr);
Eventually this is going to get really slow. Every one of these is a separate hash table lookup.
chris fleizach
Comment 7
2013-09-06 08:57:44 PDT
(In reply to
comment #6
)
> (From update of
attachment 210622
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=210622&action=review
> > > Source/WebCore/accessibility/AccessibilityObject.cpp:1562 > > + || hasAttribute(aria_atomicAttr) > > + || hasAttribute(aria_busyAttr) > > + || hasAttribute(aria_controlsAttr) > > + || hasAttribute(aria_describedbyAttr) > > + || hasAttribute(aria_disabledAttr) > > + || hasAttribute(aria_haspopupAttr) > > + || hasAttribute(aria_invalidAttr) > > + || hasAttribute(aria_labelAttr) > > + || hasAttribute(aria_labelledbyAttr) > > + || hasAttribute(aria_relevantAttr); > > Eventually this is going to get really slow. Every one of these is a separate hash table lookup.
Do you think we should cache this result? Or do you know of another way to check for the presence of a list of attributes? Thanks
WebKit Commit Bot
Comment 8
2013-09-06 09:12:50 PDT
Comment on
attachment 210622
[details]
patch Clearing flags on attachment: 210622 Committed
r155191
: <
http://trac.webkit.org/changeset/155191
>
WebKit Commit Bot
Comment 9
2013-09-06 09:12:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug