AX: aria-relevant does not expose AXARIARelevant https://bugs.webkit.org/show_bug.cgi?id=120373

Reviewed by Darin Adler.

Source/WebCore:

When global ARIA attributes are present on an Element we need to ignore
a presentational role, if set on that Element.

Test: accessibility/global-aria-attributes-invalidate-presentational.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAriaRoleAttribute):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsARIAAttributes):

LayoutTests:

* accessibility/global-aria-attributes-invalidate-presentational-expected.txt: Added.
* accessibility/global-aria-attributes-invalidate-presentational.html: Added.


Canonical link: https://commits.webkit.org/138800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155191 268f45cc-cd09-0410-ab3c-d52691b4dbfc